--- a/Foodiary/Info.plist
+++ b/Foodiary/Info.plist
@@ -29,11 +29,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCalendarsUsageDescription</key>
-	<string> </string>
+	<string>In order to log your food</string>
 	<key>NSCameraUsageDescription</key>
 	<string> </string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string> </string>
+	<string>In order to analyse your saved photos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
